--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,5 +45,6 @@
         "type_traits": "cpp",
         "utility": "cpp",
         "initializer_list": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
